force-app/main/default/objects/Goal__c/fields/Achieved_Target__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Target__c</fullName>
    <label>Achieved Target</label>
    <summarizedField>Goal_Tracking__c.Opportunity_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Goal_Tracking__c.Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Goal_Tracking__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>