force-app/main/default/objects/Goal__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <label>Expected Amount</label>
    <summarizedField>Goal_Tracking__c.Opportunity_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Goal_Tracking__c.Opportunity_Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Goal_Tracking__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>